Add player discord id config API
